# OpenCVSnippets

./: CMakeLists.txt  main.cpp  openimagev2.cpp  openimagev2.h
